# goit-ds-hw-03

task1/: main.py  pyproject.toml
task2/: import_to_mongo.py  scrape_quotes.py
